# TrustSystem

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  domain_catalog.json
api/: Cargo.toml  Dockerfile
api/src/: main.rs  subjective.rs
api/src/services/: atproto.rs  gemini.rs  graph.rs  jobs.rs  mod.rs
core/: Cargo.toml
core/src/: lib.rs
deploy/helm/api/: Chart.yaml  values.yaml
deploy/helm/api/templates/: deployment.yaml  service.yaml
deploy/helm/ui/: Chart.yaml  values.yaml
deploy/helm/ui/templates/: deployment.yaml  service.yaml
graph/: schema.groovy
ui/: Dockerfile  package-lock.json  package.json
ui/.next/: app-build-manifest.json  trace
ui/.next/cache/webpack/client-development/: index.pack.gz.old
ui/.next/cache/webpack/server-development/: index.pack.gz.old
ui/.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
ui/.next/server/app/lookup/: page.js  page_client-reference-manifest.js
ui/.next/server/app/user/[id]/: page.js  page_client-reference-manifest.js
ui/.next/server/vendor-chunks/: @swc.js  next.js
ui/.next/static/chunks/: app-pages-internals.js  webpack.js
ui/.next/static/chunks/app/lookup/: page.js
ui/.next/static/webpack/: webpack.978d45bd3da345f0.hot-update.js
ui/.next/types/app/: layout.ts
ui/.next/types/app/lookup/: page.ts
ui/.next/types/app/user/[id]/: page.ts
ui/app/: layout.tsx  page.tsx
ui/app/lookup/: page.tsx
ui/app/user/[id]/: page.tsx
workers/: Cargo.toml  Dockerfile
workers/src/: main.rs  pipeline.rs
(+1 files in other folders)
