[package]
name = "trustsystem-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "stream"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tower-http = { version = "0.5", features = ["cors"] }
trustsystem-core = { path = "../core" }
once_cell = "1.19"
dashmap = "5.5"

[dev-dependencies]
approx = "0.5"



